# Django-Online-Store

./: .gitignore  README.md  catalog_fixture.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/: blog_base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
blog/templates/includes/: blog_inc_menu.html
catalog/: admin.py  form_mixin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: add_catalog.py
catalog/migrations/: 0001_initial.py  0002_alter_product_description_alter_product_name_and_more.py
catalog/templates/: base.html  catalog_confirm_delete.html  catalog_detail.html  catalog_form.html  catalog_list.html
catalog/templates/includes/: inc_menu.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
